@@ -35,6 +35,7 @@ apply plugin: 'distribution'
 // In this section you declare where to find the dependencies of your project
 repositories {
     flatDir { dirs "libz" }
+    mavenLocal()
     mavenCentral()
     maven {
         url 'https://repo.gradle.org/gradle/libs-releases-local/'
@@ -63,9 +64,9 @@ dependencies {
     testPublish group: 'org.openmbee.testrail', name: 'testrail-cli', version: '1.0.1'
 
     // Other dependencies we're unable to resolve via standard repositories
-    
-    preCompile group: 'com.nomagic', name: 'democsm', version: '2022xRefresh2', classifier: 'Cameo_Systems_Modeler_2022x_Refresh2_HF1_no_install', ext: 'zip'
-    preCompile group: 'org.openmbee.mdk.magic', name: 'mdk', version: '6.1.0', classifier: 'plugin', ext: 'zip'
+
+    preCompile group: 'com.nomagic', name: 'democsm', version: '2024xRefresh2', classifier: 'Cameo_Systems_Modeler_2024x_Refresh2_no_install', ext: 'zip'
+    preCompile group: 'org.openmbee.mdk.magic', name: 'mdk', version: '7.0.0', classifier: 'plugin', ext: 'zip'
 
     // This ensures classpath load order to match the MagicDraw provided order and then includes extras needed for non-OpenAPI stuff.
     // This was necessary because of the Application class stubbing that was done in the chromium libraries.
@@ -158,10 +159,15 @@ task javadocZip(type: Zip, dependsOn: javadoc) {
 }
 
 class PreDist extends DefaultTask {
+    @Internal
     String humanVersion
+    @Internal
     String internalVersion
+    @Internal
     String groupName
+    @Internal
     String buildTimestamp
+    @Internal
     String descriptor
 
     @TaskAction
@@ -173,7 +179,7 @@ class PreDist extends DefaultTask {
             into 'build/generated-dist'
         }
         project.copy {
-            from project.configurations.compile.resolvedConfiguration.resolvedArtifacts.file
+            from project.configurations.runtimeClasspath.resolvedConfiguration.resolvedArtifacts.file
             from 'lib'
             from project.jar
             into "build/generated-dist/plugins/${groupName}"
@@ -322,9 +328,9 @@ task runJava(type: JavaExec) {
 
     standardOutput = System.out
     errorOutput = System.err
-
+    executable = '/Users/dlam/Library/Java/JavaVirtualMachines/liberica-full-17.0.14/bin/java'
     main = 'com.nomagic.magicdraw.Main'
-    jvmArgs = ['-Xmx8192M', '-Xss512M', '-DLOCALCONFIG=true', '-DWINCONFIG=true', '-Djsse.enableSNIExtension=false', '-Djava.net.preferIPv4Stack=true', '-Dcom.sun.media.imageio.disableCodecLib=true', '-noverify', '-Dlocal.config.dir.ext=-dev', '-splash:data/splash.png', '-Dmd.class.path=$java.class.path', '-Desi.system.config=data/application.conf', '-Dlogback.configurationFile=data/logback.xml', '-Dsun.locale.formatasdefault=true', '-Djdk.attach.allowAttachSelf=true']
+    jvmArgs = ['-XX:+IgnoreUnrecognizedVMOptions', '-Xmx4000M', '-Xss1024K', '-DLOCALCONFIG=true', '-Dlocal.config.dir.ext=-dev', '-splash:data/splash.png', '-Desi.system.config=data/application.conf', '-Djdk.attach.allowAttachSelf=true', '-Dsun.locale.formatasdefault=true', '-XX:-OmitStackTraceInFastThrow', '--illegal-access=permit', '-Dfile.encoding=UTF-8', '@bin/vm.options', '-Djdk.util.zip.disableZip64ExtraFieldValidation=true']
     // arguments to pass to the application
     args 'DEVELOPER'
 }
